--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.2",
     "next": "15.1.7",
